@startuml

class Farm {
  - farmID : int
  - name : string
  - ownerName : string
  - email : string
  - phoneNum : string
  - latitude : float
  - longitude : float
}

class WeatherSoilData {
  - id : int
  - timestamp : time
  - temperature : float
  - precipitation : float
  - windSpeed : float
  - humidity : float
  - pHLevel : float
  - nutrientContent : float
  - moistureLevel : float
}

class Crop {
  - cropID : int
  - cropType : string
  - quantity : map
}

class Field {
  - fieldID : int
  - area : float
  - longitude : float
  - latitude : float
  
}

class IoTSensor {
  - sensorID : int
  - sensorType
}

class Alert {
  - alertID : int
  - alertType : AlertEnum
  - message : string
  - timestamp : time
}

enum AlertEnum {
  + WARNING
  + ERROR
  + FATAL
  + NOTIFICATION
}

class ForumPost {
  - postID : int
  - content : string
  - timestamp : time
}

class CommunityForum {
  - forumID : int
  - forumName : string
  --
  + createPost()
  + viewPosts()
  + participateInDiscussion()
}

Field "1..*" -- "0..*" Crop
WeatherSoilData -- WeatherAPI
Field "1" -- "1" IoTSensor
Crop "1" -- "1" WeatherSoilData : bestConditions
IoTSensor "1" -- "0..*" WeatherSoilData
Farm "1" -- "0..*" Alert
Farm "1" -- "1..*" Field
Farm "1..*" -- "0..*" CommunityForum : participate
CommunityForum "1" -- "0..*" ForumPost : contains
ForumPost "0..*" -- "1" Farm
AlertEnum -- Alert


@enduml